packages/print/ui/pdf.css
.page-sheet {
	display:block;
	position:relative;
	page-break-after: always;
	counter-increment: sheet;
	z-index:0;
	flex: 0 0 auto;
}
.page-sheet::before {
	content:'';
	position:absolute;
	background-color:var(--color);
	background-image:var(--image);
	background-size: var(--size-w, auto) var(--size-h, auto);
	background-repeat:var(--repeat);
	background-position: var(--position, auto);
	width: var(--width, 100%);
	height: var(--height, 100%);
	left: 0;
	top:0;
	z-index: -1;
	pointer-events: none;
}

.page-sheet-error {
	outline: 8px dashed red;
}

body[data-fold-v] .page-sheet-right {
	margin-right:0;
	page-break-after: avoid;
}

body[data-fold-v] .page-sheet-left {
	margin-left:0;
}

.layout.bleedLeft {
	margin-left: calc( -1 * var(--pdf-margin));
}
.layout.bleedRight {
	margin-right: calc( -1 * var(--pdf-margin));
}
.layout.bleedTop {
	margin-top: calc( -1 * var(--pdf-margin));
}
.layout.bleedBottom {
	margin-bottom: calc( -1 * var(--pdf-margin));
}

.page-sheet-count[data-separator]::before {
	content: counter(sheet) " " attr(data-separator) " " counter(sheets);
}
.page-sheet-count:not([data-separator])::before {
	content: counter(sheet);
}

.page-sheet-match {
	visibility: hidden;
}
[contenteditable] .page-sheet-match,
.page-sheet-left .page-sheet-match[data-match="left"],
.page-sheet-right .page-sheet-match[data-match="right"],
.page-sheet-first .page-sheet-match[data-match="first"],
.page-sheet-last .page-sheet-match[data-match="last"] {
	visibility:initial;
}

body,
body > element-template > .view {
	display:flex;
	flex-wrap: wrap;
	align-items: center;
	justify-content: center;
}

@media screen {
	.page-sheet {
		box-shadow: rgb(0 0 0 / 40%) 0.2em 0.2em 0.4em;
	}
	body {
		flex: 1 0 auto;
		overflow: auto;
	}
	body + div.pdf-menu {
		top: 0%;
		left: 0%;
		position: fixed;
		margin:0.2em;
		font-size: 2rem;
		z-index: 2147483647;
	}
	body + div.pdf-menu > a {
		color: white;
		opacity:0.9;
		margin:0.2em;
		background: black;
		border-radius: 0.5em;
		text-align: center;
		padding: 0rem 1rem 0.5rem;
		box-shadow: rgb(0 0 0 / 20%) 0px 0.2em 0.5em -0.1em;
		text-shadow: white 0.1em 0.1em 0.5em;
		z-index: 1;
	}
	body + div.pdf-menu > a:visited {
		color:white;
	}

	.page-sheet::after {
		content:'';
		position:absolute;
		inset:var(--pdf-margin, 0);
		border-width: min(1px, var(--pdf-margin, 0));
		border-style: dashed;
		z-index: 1;
		pointer-events: none;
	}
}

@media print {
	body + div.pdf-menu {
		display:none;
	}
}

